Prominent language change on mobile - Closes https://github.com/kamilmielnik/scrabble-solver/issues/260 - Show current locale flag in settings button in MenuModal - Introduce LOCALE_FLAGS constant in i18n - Refactor LocaleSetting accordingly

--- a/packages/scrabble-solver/src/components/Button/Button.module.scss
+++ b/packages/scrabble-solver/src/components/Button/Button.module.scss
@@ -64,12 +64,22 @@
 }
 
 .icon {
+  flex: 0 0 auto;
   width: var(--button--icon--size);
   height: var(--button--icon--size);
   transition: var(--transition);
 }
 
 .label {
+  flex: 1;
   font-size: var(--font--size--h3);
   transition: var(--transition);
+
+  [dir='ltr'] & {
+    text-align: left;
+  }
+
+  [dir='rtl'] & {
+    text-align: right;
+  }
 }
